2007-07-16  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/LocalePlugin/sqUnixLocale.c: Added.

2007-07-13  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.9-12.

	* src: Negative oop comparison patches from Dave Lewis
	incorporated.

2007-06-07  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* config/configure.ac: Version is 3.9-11.

	* plugins/SocketPlugin/sqUnixSocket.c: Implemented IPv6
	primitives.

2007-03-25  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/MIDIPlugin/Makefile.inc (XLDFLAGS): MIDIPlugin.so
	depends on libasound.

2007-03-11  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/MIDIPlugin/acinclude.m4: Check for MIDI support via
	ALSA.

	* plugins/MIDIPlugin/sqUnixMIDI.c: Determine available MIDI
	support and include appropriate source file.

	* plugins/MIDIPlugin/sqUnixMIDINone.c: Created from sqUnixMIDI.c.

	* plugins/MIDIPlugin/sqUnixMIDIALSA.c: ALSA-based support added.

	* config/config.h.in: Add USE_MIDI_ALSA.

2007-03-07  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/SerialPlugin/sqUnixSerial.c: Speeds >2500k are
	conditional on symbolic name being defined.

2007-02-19  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-display-X11/sqUnixX11.c (display_ioGLcreateRenderer):
	Explicitly set border pixel.
	(xError): Print error message, request opcode and serial number.

2006-12-11  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* vm-sound-ALSA/sqUnixSoundALSA.c: Attempt to reduce output
	latency by searching on buffer size that just avoids underrun.

	* plugins/VideoForLinuxPlugin/palettes.c: Add YUYV format
	conversion.

	* plugins/VideoForLinuxPlugin/acinclude.m4: Include stdlib before
	videodev to work around GNU/Linux header bug.

2006-12-04  Ian Piumarta  <com -dot- gmail -at- piumarta (backwards)>

	* plugins/UnixOSProcessPlugin/acinclude.m4: Require pthreads.
