@@ -27,7 +27,7 @@
 
 /* Author: Ian Piumarta <ian.piumarta@squeakland.org>
  *
- * Last edited: 2007-02-19 19:18:58 by piumarta on emilia
+ * Last edited: 2007-08-31 16:31:33 by piumarta on emilia
  *
  * Support for more intelligent CLIPBOARD selection handling contributed by:
  *	Ned Konz <ned@bike-nomad.com>
@@ -193,6 +193,9 @@ char		*selectionAtomNames[SELECTION_ATOM_COUNT]= {
 	 "SQUEAK_SELECTION",		/* used for XGetSelectionOwner() data */
 #define selectionAtom   selectionAtoms[7]
 };
+
+Atom		 wmProtocolsAtom;	/* for window deletion messages */
+Atom		 wmDeleteWindowAtom;
 
 #if defined(USE_XSHM)
 XShmSegmentInfo  stShmInfo;		/* shared memory descriptor */
@@ -1397,7 +1400,10 @@ static void handleEvent(XEvent *evt)
       break;
 
     case ClientMessage:
-      if (useXdnd)
+      if (wmProtocolsAtom == evt->xclient.message_type
+	  && wmDeleteWindowAtom == evt->xclient.data.l[0])
+	recordWindowEvent(WindowEventClose);
+      else if (useXdnd)
 	dndHandleClientMessage(&evt->xclient);
       break;
 
@@ -2001,6 +2007,13 @@ void initWindow(char *displayName)
       }
     XSetWMHints(stDisplay, stParent, wmHints);
     XFree((void *)wmHints);
+  }
+
+  /* tell the WM that we do not want to be destroyed from the title bar close button */
+  {
+    wmProtocolsAtom=    XInternAtom(stDisplay, "WM_PROTOCOLS", False);
+    wmDeleteWindowAtom= XInternAtom(stDisplay, "WM_DELETE_WINDOW", False);
+    XSetWMProtocols(stDisplay, stParent, &wmDeleteWindowAtom, 1);
   }
 
   /* create a suitable graphics context */
